# configsystem

./: .gitignore  README.md  configurator.py  duplicatefilter.py  pyproject.toml  test_configurator.py
config_types/: __init__.py  environment_config.py  json_config.py  static_config.py  yaml_config.py
examples/: example_json.py  example_json_dynamic_reload.py  example_static.py
examples/files/: example.json  sky_current.json  sky_day.json
tests/: double_test.json  double_test.yaml  test.json  test.yaml
